bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking==true){
    if (hour<7 or hour >20){
      return true
    }
  }
  return false
}